# pythonproject

./: .coverage  .env  .env.sample  .gitignore  README.md  main.py  pyproject.toml
src/: decorators.py  external_api.py  functions.py  generators.py  get_info.py  main.py  masks.py  mylog.txt  utils.py  widget.py
src/masks/: functions.py  processing.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_functions.py  test_generators.py  test_get_info.py  test_processing.py  test_utils.py  test_widget.py
